# Celeratas

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  basic.py  grammar.txt  interpreter_test.py  lexer_test.py  parser_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  root.py  setup.cfg  setup.py  shell.py  test.mist  tox.ini  versioneer.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: tests.yml
.github/workflows/: publish.yml  release.yml  tests.yml
Celeratas/: __init__.py  __main__.py  _version.py  shell.py
Celeratas/helper/: convert_roman.py  errors.py  grammar.txt  tokens.py
Celeratas/interpreter/: Interpreter.py  RTResult.py  constants.py
Celeratas/interpreter/values/: Bool.py  Dict.py  List.py  Number.py  String.py  Value.py  __init__.py
Celeratas/interpreter/values/functions/: BaseFunction.py  BuiltInFunction.py  Function.py  __init__.py
Celeratas/lexer/: Lexer.py
Celeratas/parser/: Parser.py  nodes.py
helper/: __init__.py  convert_roman.py  errors.py  grammar.txt  tokens.py
interpreter/: Bool.py  Number.py  String.py  constants.py  interpreter.py
interpreter/values/: Bool.py  Dict.py  List.py  Number.py  String.py  Value.py  __init__.py
interpreter/values/functions/: BuiltInFunction.py  Function.py  __init__.py
lexer/: __init__.py  constants.py  lexer.py  position.py
main/: interpreter.py  lexer.py  parser.py  root.py
parser/: __init__.py  parser.py
root/: constants.py  root.py
src/: shell.py
src/Celeratas/: __main__.py
src/Celeratas/interpreter/: constants.py
src/Celeratas/interpreter/values/: List.py  Number.py  String.py
src/Celeratas/interpreter/values/functions/: BaseFunction.py  Function.py
src/Celeratas/lexer/: Lexer.py
src/Celeratas/parser/: Parser.py
src/helper/: convert_roman.py  errors.py  grammar.txt  tokens.py
src/interpreter/: Interpreter.py  __init__.py
src/interpreter/values/: Bool.py  Dict.py  Number.py  String.py
src/interpreter/values/functions/: BaseFunction.py  BuiltInFunction.py  Function.py
src/lexer/: Lexer.py
src/parser/: Parser.py  nodes.py
tests/: interpreter_test.py  lexer_test.py  parser_test.py
