[metadata]
name = Celeratas
description = The Latin Programming Language
long_description = file: README.md
long_description_content_type = text/markdown

version = 1.0.1
author = Finn Mattis
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages =
    Celeratas
python_requires = >=3.6
package_dir =
    =src
zip_safe = no