[metadata]
name = Celeratas
description = The Latin Programming Language
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.0
author = Finn Mattis
author_email = TopSecret@DontEmailMe.com
license = MIT
license_file = LICENSE
url = https://github.com/planto73/Celeratas
platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: Latin
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Compilers

[options]
packages=find:
python_requires = >=3.6